--- a/src/CompoundMerkleProofView.css
+++ b/src/CompoundMerkleProofView.css
@@ -8,3 +8,8 @@
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
+
+.compound-merkle-path {
+    inline-size: fit-content;
+    min-width: 20.5em;
+}
