--- a/src/MerkleProofsView.css
+++ b/src/MerkleProofsView.css
@@ -6,6 +6,7 @@
     min-height: 20px;
     padding: 19px;
     margin-bottom: 20px;
+    margin-left: 4px;
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
     border-radius: 4px;
