--- a/src/MerkleProofsView.css
+++ b/src/MerkleProofsView.css
@@ -4,7 +4,7 @@
 
 .merkle-proofs pre {
     min-height: 20px;
-    padding: 19px;
+    padding: 2em 5em 2em 1em;
     margin-bottom: 20px;
     margin-left: 4px;
     background-color: #f5f5f5;
