--- a/src/TscMerkleProofsView.css
+++ b/src/TscMerkleProofsView.css
@@ -1,14 +1,15 @@
-.compound-merkle-path pre {
+.tsc-merkle-proofs {
+    display: flex;
+}
+
+.tsc-merkle-proofs pre {
+    min-height: 20px;
     padding: 19px;
     margin-bottom: 20px;
+    margin-left: 4px;
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-}
-
-.compound-merkle-path {
-    inline-size: fit-content;
-    min-width: 23em;
 }
