--- a/src/TscMerkleProofsView.css
+++ b/src/TscMerkleProofsView.css
@@ -1,5 +1,9 @@
 .tsc-merkle-proofs {
   display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .tsc-merkle-proofs pre {
