--- a/src/MerkleTreeView.css
+++ b/src/MerkleTreeView.css
@@ -59,6 +59,14 @@
   background-color: sandybrown;
 }
 
+.tree li.calculable > code,
+.tree li.calculable > span {
+  background-color: #e0e0e0;
+  opacity: 0.7;
+  border-style: dashed;
+  color: #666;
+}
+
 .tree li.selected > code,
 .tree li.selected > span {
   background-color: aquamarine;
@@ -67,6 +75,12 @@
 .tree li.selected.merkleproof > code,
 .tree li.selected.merkleproof > span {
   background: linear-gradient(165deg, sandybrown 50%, aquamarine 50%);
+}
+
+.tree li.selected.calculable > code,
+.tree li.selected.calculable > span {
+  background: linear-gradient(165deg, #e0e0e0 50%, aquamarine 50%);
+  opacity: 0.8;
 }
 
 /* If the tree represents DOM structure */
